--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
 
     <section id="about">
         <h2 class="section-title">About Me</h2>
-        <div class="profile-image">
 
-        </div>
-        <div class="bio">
-            <p>Ciao! I'm Mohamed, a full-stack developer originally from Algeria, now bringing Italian design sensibilities to digital experiences worldwide.</p>
-            <p>With over 4 years of experience in development, I blend technical expertise with an eye for elegant solutions.</p>
-            <p>When I'm not coding, you can find me enjoying espresso, cycling through the countryside, or studying architectural history for inspiration.</p>
+        <div class="about-content">
+            <div class="profile-img">
+                <img src="/Portfolio-Template/photo_5852609857197294841_c.jpg" alt="Image">
+            </div>
+            <div class="bio">
+                <p>Ciao! I'm Mohamed, a full-stack developer originally from Algeria, now bringing Italian design sensibilities to digital experiences worldwide.</p>
+                <p>With over 4 years of experience in development, I blend technical expertise with an eye for elegant solutions.</p>
+                <p>When I'm not coding, you can find me enjoying espresso, cycling through the countryside, or studying architectural history for inspiration.</p>
+            </div>
         </div>
     </section>
 
@@ -65,6 +68,7 @@
                 <p>Binary Exploitation, Web Security, Network</p>
             </div>
     </section>
+
     <section id="projects">
         <h2 class="section-title">Featured Projects</h2>
         <div class="projects-grid">
@@ -139,8 +143,8 @@
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-        <p>&copy; 2023 Marco DeVello. All rights reserved.</p>
-        <p>Crafted with ❤️ in Florence, Italy</p>
+        <p>&copy; 2025 Telkhoukhe Mohamed. All rights reserved.</p>
+        <p>Crafted with ❤️ in Doha, Qatar</p>
     </footer>
 </body>
 </html>
